[package]
name = "licht"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.3"
egui = "0.32.3"
egui_extras = { version = "0.32.3", features = ["default", "all_loaders"] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
image = { version = "0.25.8", features = ["jpeg"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
walkers = "0.45.0"
