[package]
name = "licht"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
eframe = "0.32.3"
egui = "0.32.3"
egui_extras = { version = "0.32.3", features = ["default", "all_loaders"] }
image = { version = "0.25.8", features = ["jpeg"] }
mimalloc = "0.1.48"
puffin = "0.19.1"
puffin_http = "0.16.1"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
walkers = "0.45.0"
zip = "5.1.1"
bytes = "1.10.1"
tracing = "0.1"
tracing-subscriber = "0.3.20"
futures = "0.3.31"
